--- a/wp-content/themes/workingnyc/views/components/accordion.twig
+++ b/wp-content/themes/workingnyc/views/components/accordion.twig
@@ -1,23 +1,23 @@
 <article class="c-accordion {{ this.classes }}" id="{{ this.id }}">
   <header class="c-accordion__header">
-    <button aria-controls="aria-c-{{ this.id }}" aria-expanded="{{ this.active }}" class="c-accordion__toggle btn btn-text w-full text-start print:hidden {% if this.active %}active{% endif %}" data-js="accordion">
-      <span class="c-accordion__heading text-alt mt-0" id="aria-lb-{{ this.id }}">
+    <button aria-controls="aria-c-{{ this.id }}" aria-expanded="{{ this.active }}" class="c-accordion__toggle w-full text-start print:hidden {% if this.active %}active{% endif %}" data-js="accordion">
+      <span class="c-accordion__heading mt-0" id="aria-lb-{{ this.id }}">
         <span>{{ this.header }}</span>
       </span>
 
       <span class="c-accordion__toggle-active">
-        <span>{{ __('Hide', 'wnyc') }}</span>
+        <svg class="icon-wnyc-ui" role="img">
+          <title>{{ __('Hide', 'wnyc') }}</title>
 
-        <svg aria-hidden="true" class="icon-wnyc-ui">
-          <use xlink:href="#chevron-down"></use>
+          <use xlink:href="#feather-chevron-down"></use>
         </svg>
       </span>
 
       <span class="c-accordion__toggle-inactive">
-        <span>{{ __('Expand', 'wnyc') }}</span>
+        <svg class="icon-wnyc-ui" role="img">
+          <title>{{ __('Expand', 'wnyc') }}</title>
 
-        <svg aria-hidden="true" class="icon-wnyc-ui">
-          <use xlink:href="#chevron-up"></use>
+          <use xlink:href="#feather-chevron-up"></use>
         </svg>
       </span>
     </button>
@@ -30,14 +30,14 @@
       {% if this.cta %}
       <p class="print:hidden">
         <a class="btn btn-secondary btn-next w-full" href="{{ this.cta.href }}" {% if this.cta.target %}target="{{ this.cta.target }}"{% endif %} {% if this.cta.rel %}rel="{{ this.cta.rel }}"{% endif %} {% if this.active == false %}tabindex="-1"{% endif %}>
-          <svg aria-hidden="true" class="icon-wnyc-ui" {% if this.active == false %}tabindex="-1"{% endif %}>
-            <use xlink:href="#arrow-left"></use>
+          <svg aria-hidden="true" class="icon-wnyc-ui rtl:flip" {% if this.active == false %}tabindex="-1"{% endif %}>
+            <use xlink:href="#feather-arrow-left"></use>
           </svg>
 
           {{ this.cta.text }}
 
-          <svg aria-hidden="true" class="icon-wnyc-ui" {% if this.active == false %}tabindex="-1"{% endif %}>
-            <use xlink:href="#arrow-right"></use>
+          <svg aria-hidden="true" class="icon-wnyc-ui rtl:flip" {% if this.active == false %}tabindex="-1"{% endif %}>
+            <use xlink:href="#feather-arrow-right"></use>
           </svg>
         </a>
       </p>
