--- a/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
+++ b/wp-content/themes/workingnyc/views/components/breadcrumbs.twig
@@ -1,17 +1,17 @@
 <nav class="o-header__breadcrumbs" aria-label="Breadcrumb">
-  <a href="{{site.url}}">{{ __('Home', 'WNYC') }}</a>
+  <a href="{{ site.url }}">{{ __('Home', 'WNYC') }}</a>
 
   {% if crumbs %}
-    {% for crumb in crumbs %}
-      <svg aria-hidden="true" class="o-header__breadcrumbs-chevron icon-wnyc-ui text-scale-4">
-        <use xlink:href="#chevron-right"></use>
-      </svg>
+  {% for crumb in crumbs %}
+    <svg aria-hidden="true" class="o-header__breadcrumbs-chevron icon-wnyc-ui rtl:flip">
+      <use href="#feather-chevron-right"></use>
+    </svg>
 
-      {% if crumb.link != '' %}
-      <a href="{{ crumb.link }}">{{ crumb.label }}</a>
-      {% else %}
-      <a href="#" aria-current="page">{{ crumb.label }}</a>
-      {% endif %}
-    {% endfor %}
+    {% if crumb.link != '' %}
+    <a href="{{ crumb.link }}">{{ crumb.label }}</a>
+    {% else %}
+    <b aria-current="page">{{ crumb.label }}</b>
+    {% endif %}
+  {% endfor %}
   {% endif %}
 </nav>
