--- a/wp-content/themes/workingnyc/views/components/questionnaire.twig
+++ b/wp-content/themes/workingnyc/views/components/questionnaire.twig
@@ -1,35 +1,45 @@
 {% if questionnaire_qs %}
   <section data-aos="fade-up" data-aos-anchor-placement="top-bottom" v-cloak>
     <p class="mb-5 text-center tablet:mb-3">
-      <a class="btn btn-link btn-secondary font-secondary" href="#answer-a-few-questions">{{ __('Answer a question to get started', 'WNYC-Questionnaire') }}</a>
+      {# <a class="btn btn-link btn-secondary font-secondary" href="#answer-a-few-questions">{{ __('Answer a question to get started', 'WNYC-Questionnaire') }}</a>
+
       <br class="tablet:hidden" />{{ __('or', 'WNYC-Questionnaire') }}
+
       <br />
+
       <a class="btn btn-link btn-secondary font-secondary block tablet:inline-flex" href="#content">
         <span>{{ __('Scroll to browse programs', 'WNYC-Questionnaire') }}</span>
+
         <br class="tablet:hidden" />
+
         <svg aria-hidden="true" class="icon-wnyc-ui m-0 mt-1">
-          <use xlink:href="#chevron-down"></use>
+          <use href="#chevron-down"></use>
         </svg>
-      </a>
+      </a> #}
+      {{ __('Let\'s find some programs that work for you.', 'WNYC-Questionnaire') }}
     </p>
 
-    <form :action="'{{programs_archive}}'+query" class="c-card" data-js="validate-and-query" method="post" id="answer-a-few-questions" data-post-type="{{questionnaire_post_type}}" data-post-threshold="{{questionnaire_threshold}}">
+    <form :action="'{{ programs_archive }}'+query" class="c-card" data-js="validate-and-query" method="post" id="answer-a-few-questions" data-post-type="{{ questionnaire_post_type }}" data-post-threshold="{{ questionnaire_threshold }}">
       <div class="p-3 desktop:p-4">
-
         {% for question in questionnaire_qs %}
-          <fieldset {% if loop.index == 1 %}class="mb-2"{% else %}aria-hidden="true" class="hidden mt-3"{% endif %} data-taxonomy="{{question.questionnaire_taxonomy}}" field-key="{{loop.index}}">
+          <fieldset {% if loop.index == 1 %}class="mb-2"{% else %}aria-hidden="true" class="hidden mt-3"{% endif %} data-taxonomy="{{ question.questionnaire_taxonomy }}" field-key="{{ loop.index }}">
             <div class="c-question">
-              {% set question_name = question.questionnaire_question|lower|replace({' ':'-', '?':''})%}
-              <label class="c-question__label" for="{{question_name}}">{{question.questionnaire_question}}</label>
+              {% set question_name = question.questionnaire_question|lower|replace({' ':'-', '?':''}) %}
+
+              <label class="c-question__label" for="{{ question_name }}">{{ question.questionnaire_question }}</label>
+
               <p>{{ __('Choose one for now. You can add later using filters.', 'WNYC-Questionnaire') }}</p>
+
               <div class="c-question__container">
                 <div class="select">
-                  <select aria-controls="aria-c-schedules" aria-labelledby="{{question_name}}" data-js="toggle" id="{{question_name}}" name="{{question_name}}" v-model="checkedFilters[{{loop.index}}]">
+                  <select aria-controls="aria-c-schedules" aria-labelledby="{{ question_name }}" data-js="toggle" id="{{ question_name }}" name="{{ question_name }}" v-model="checkedFilters[{{ loop.index }}]">
                     <option value="undefined" disabled>{{ __('Select an option', 'WNYC-Questionnaire') }}</option>
-                    <option v-for="(term,index) in filters[{{loop.index - 1}}]" :value="term" :title="'{{question.questionnaire_question}}' +' Option ' + (index + 1) + ' of ' + filters[{{loop.index - 1}}].length + ': ' + term.name">v{ term.name }</option>
+
+                    <option v-for="(term, index) in filters[{{ loop.index - 1 }}]" :value="term" :title="'{{ question.questionnaire_question }}' +' Option ' + (index + 1) + ' of ' + filters[{{ loop.index - 1 }}].length + ': ' + term.name">v{ term.name }</option>
                   </select>
+
                   <svg aria-hidden="true" class="select__graphic">
-                    <use xlink:href="#select-wnyc-chevrons"></use>
+                    <use href="#select-wnyc-chevrons"></use>
                   </svg>
                 </div>
               </div>
@@ -38,47 +48,60 @@
         {% endfor %}
 
         <div id="aria-c-messaging">
-          <article class="c-alert color-status-secondary mb-5" data-js="alert-success" v-if="(success || checkedFilters.length == (filters.length + 1)) && totalPosts > 0">
+          <article class="c-alert status-secondary mb-5" data-js="alert-success" v-if="(success || checkedFilters.length == (filters.length + 1)) && totalPosts > 0">
             <div class="c-alert__graphic">
               <svg aria-hidden="true" class="icon-wnyc-ui">
-                <use xlink:href="#info"></use>
+                <use href="#feather-info"></use>
               </svg>
             </div>
+
             <div class="c-alert__body">
               <p data-alert="text" aria-live="polite">
                 <span>{{ __('Got it! We found', 'WNYC-Questionnaire') }} <b>v{ totalPosts }</b> {{ __('programs matching your interest.', 'WNYC-Questionnaire') }}
               </p>
             </div>
           </article>
-          <article class="c-alert color-status-secondary mb-5" data-js="alert-warning" v-if="success==false">
+
+          <article class="c-alert status-secondary mb-5" data-js="alert-warning" v-if="success==false">
             <div class="c-alert__graphic">
               <svg aria-hidden="true" class="icon-wnyc-ui">
-                <use xlink:href="#info"></use>
+                <use href="#feather-info"></use>
               </svg>
             </div>
+
             <div class="c-alert__body">
-              <p data-alert="text" aria-live="polite">{{ __('For those choices, we suggest seeing', 'WNYC-Questionnaire') }}
-                <a href="{{programs_archive}}" tabindex="-1">{{ __('all programs available now.', 'WNYC-Questionnaire') }}</a>
+              <p data-alert="text" aria-live="polite">
+                {{ __('For those choices, we suggest seeing', 'WNYC-Questionnaire') }}
+
+                <a href="{{ programs_archive }}" tabindex="-1">{{ __('all programs available now.', 'WNYC-Questionnaire') }}</a>
+
                 {{ __('Add filters on the Programs page to find what’s right for you. To get updates on programs that match your interests, you can also', 'WNYC-Questionnaire') }}
+
                 <a href="/newsletter" tabindex="-1">{{ __('sign up for our newsletter.', 'WNYC-Questionnaire') }}</a>
               </p>
-
             </div>
           </article>
-          <article class="c-alert color-status-tertiary mb-5" data-js="alert-warning" v-if="error">
+
+          <article class="c-alert status-tertiary mb-5" data-js="alert-warning" v-if="error">
             <div class="c-alert__graphic">
               <svg aria-hidden="true" class="icon-wnyc-ui">
-                <use xlink:href="#info"></use>
+                <use href="#feather-info"></use>
               </svg>
             </div>
+
             <div class="c-alert__body">
               <p data-alert="text" aria-live="polite">{{ __('Sorry, there was an error on our site. Please try again later.', 'WNYC-Questionnaire') }}</p>
             </div>
           </article>
         </div>
-        <button class="btn btn-primary btn-next w-full" v-if="totalPosts == 0 && checkedFilters.length == 0">{{ __('Find your program now', 'WNYC-Questionnaire') }}</button>
-        <button class="btn btn-secondary btn-next w-full" v-if="totalPosts > 1 && checkedFilters.length > 0">{{ __('Find your programs now', 'WNYC-Questionnaire') }}</button>
-        <button class="btn btn-secondary btn-next w-full" v-if="totalPosts == 1 && checkedFilters.length > 0">{{ __('Find your program now', 'WNYC-Questionnaire') }}</button>
+
+        {# <button class="btn btn-primary btn-next w-full" v-if="totalPosts == 0 && checkedFilters.length == 0">{{ __('Find your program now', 'WNYC-Questionnaire') }}</button> #}
+
+        <button class="btn btn-primary btn-next w-full mb-2" v-if="totalPosts > 1 && checkedFilters.length > 0">{{ __('View programs now', 'WNYC-Questionnaire') }}</button>
+
+        <button class="btn btn-primary btn-next w-full mb-2" v-if="totalPosts == 1 && checkedFilters.length > 0">{{ __('View program now', 'WNYC-Questionnaire') }}</button>
+
+        <p class="text-center">Or <a href="/programs">see all programs</a>.</p>
       </div>
     </form>
   </section>
