--- a/wp-content/themes/workingnyc/views/index.twig
+++ b/wp-content/themes/workingnyc/views/index.twig
@@ -11,16 +11,16 @@
 
           {% if post.content %}{{ post.content }}{% endif %}
 
-          <p class="small">
-            <span class="flex items-center">
-              <svg aria-hidden="true" class="icon-wnyc-ui me-1 icon-2">
-                <use xlink:href="#info"></use>
-              </svg>
+          <p class="small flex items-center">
+            <svg class="icon-wnyc-ui mie-1 icon-2" role="img">
+              <title>{{ __('Last updated', 'WNYC-Date') }}</title>
 
-              {{ __('Last updated', 'WNYC-Date') }}
+              <use href="#feather-alert-triangle"></use>
+            </svg>
 
-              {{ modified_date }}
-            </span>
+            {{ __('Last updated', 'WNYC-Date') }}
+
+            {{ modified_date }}
           </p>
         </div>
       </header>
@@ -30,14 +30,16 @@
     <div class="layout-content sticky top-0 bg-scale-1 z-20">
       <div class="px-2 tablet:px-3">
         <div class="overflow-hidden overflow-x-scroll whitespace-nowrap" data-js="active-navigation-scroll">
-          <nav class="c-utility inline-flex relative px-0" data-js="active-navigation" aria-label="Jump Navigation">
-            <span class="c-utility__item">{{ __('Jump to', 'WNYC')}}</span>
+          <nav class="c-utility font-secondary inline-flex relative px-0" data-js="active-navigation" aria-label="{{ __('Jump Navigation', 'WNYC') }}">
+            <span class="c-utility__item text-alt">{{ __('Jump to', 'WNYC')}}</span>
 
-            <a class="btn btn-link btn-small btn-secondary font-secondary" href="#content">{{ __('Top of page', 'WNYC') }}</a>
+            <a class="text-secondary" href="#content">{{ __('Top of page', 'WNYC') }}</a>
+
+            {# no-underline text-alt #}
 
             {% for section in sections %}
             {% if section.section_title %}
-            <a class="btn btn-link btn-small btn-secondary font-secondary" href="#{{ section.section_title|trim|replace({' ': '-'})|lower }}">{{ section.section_title }}</a>
+            <a class="text-secondary" data-active-navigation-item="no-underline text-alt" data-inactive-navigation-item="text-secondary" href="#{{ section.section_title|trim|replace({' ': '-'})|lower }}">{{ section.section_title }}</a>
             {% endif %}
             {% endfor %}
           </nav>
@@ -47,30 +49,42 @@
 
     {% if sections %}
     <div class="bg-scale-2">
-      <div class="layout-content">
-        <div class="py-4 wrap" data-js="observe" data-js-observe-items="heading">
+      <div class="layout-content pb-8 mb-8">
+        <div class="py-4" data-js="observe" data-js-observe-items="heading">
           {% for section in sections %}
           <section data-js-observe-item="heading" {% if not loop.last %}class="pb-6"{% endif %} {% if section.section_title %}id="{{ section.section_title|trim|replace({' ': '-'})|lower }}"{% endif %}>
             {% if section.section_title %}
-            <div class="pt-utility-anchor bg-scale-2 sticky top-0">
-              <h3 class="h5 mt-0 text-alt border-b border-scale-4 py-2 tablet:py-3">
-                {{ section.section_title }}
-              </h3>
+            <div class="pt-utility-anchor bg-scale-2 sticky top-0 z-10">
+              <div class="wrap">
+                <h3 class="h5 mb-3 text-alt border-b border-scale-4 py-2 tablet:py-3">
+                  {{ section.section_title }}
+                </h3>
+              </div>
             </div>
             {% endif %}
 
-            {{ section.section_content }}
+            <div class="wrap">
+              {{ section.section_content }}
+            </div>
           </section>
           {% endfor %}
         </div>
       </div>
 
-      <div class="layout-content sticky z-10 o-navigation-feedback-spacing-bottom">
-        <div class="px-2 pt-2 text-end">
-          <a class="btn btn-small tablet:btn btn-secondary bg-scale-1" href="#content">Back to top</a>
+      <div class="layout-content pb-2 sticky z-10 o-navigation-feedback-spacing-bottom">
+        <div class="wrap text-end">
+          <a class="btn btn-small tablet:btn btn-secondary" href="#content">{{ __('Back to top', 'WNYC') }}</a>
         </div>
       </div>
     </div>
+    {% endif %}
+
+    {% if options.feedback is defined %}
+    {% include 'objects/feedback.twig' %}
+    {% endif %}
+
+    {% if show_newsletter is not defined %}
+    {% include 'objects/newsletter.twig' %}
     {% endif %}
   </main>
 </div>
