--- a/wp-content/themes/workingnyc/views/objects/newsletter.twig
+++ b/wp-content/themes/workingnyc/views/objects/newsletter.twig
@@ -1,20 +1,23 @@
-<section class="layout-content py-6 bg-scale-2" data-js="newsletter">
-	<div class="pt-2 pb-3 wrap">
-		<h2 class="h4 font-normal text-alt mt-0">{{ __('Newsletter', 'WNYC-Newsletter') }}</h2>
-		<form action="{{newsletter_link}}/#content" id="mc-embedded-subscribe-form" method="post" novalidate="true">
-			<div
-				class="c-question c-question-single" id="a348d8b2ae03">
-				<label class="c-question__label" for="EMAIL">{{ __('Enter your email to sign up for the Working NYC newsletter and stay up-to-date with careers, training, and events.', 'WNYC-Newsletter') }}</label>
-				<div class="c-question__container">
-					<div class="c-question__input">
-						<div class="input">
-						<input id="question-a348d8b2ae03" name="EMAIL" placeholder="Enter your email" required="true" type="email"> </div>
-						<div class="c-question__button">
-							<button class="btn btn-primary btn-small" type="submit">{{ __('Submit', 'WNYC-Newsletter') }}</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</form>
-	</div>
+<section class="o-newsletter layout-content py-6" data-js="newsletter">
+  <div class="pt-2 pb-3 wrap">
+    <h2 class="o-newsletter__heading h4 font-normal">{{ __('Newsletter', 'WNYC-Newsletter') }}</h2>
+
+    <form action="{{ newsletter_link }}/#content" id="mc-embedded-subscribe-form" method="post" novalidate="true">
+      <div class="c-question c-question-single" id="a348d8b2ae03">
+        <label class="c-question__label" for="EMAIL">{{ __('Enter your email to sign up for the Working NYC newsletter and stay up-to-date with careers, training, and events.', 'WNYC-Newsletter') }}</label>
+
+        <div class="c-question__container">
+          <div class="c-question__input">
+            <div class="input">
+              <input id="question-a348d8b2ae03" name="EMAIL" placeholder="Enter your email" required="true" type="email">
+            </div>
+
+            <div class="c-question__button">
+              <button class="btn btn-primary btn-small" type="submit">{{ __('Submit', 'WNYC-Newsletter') }}</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </section>
